<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/mapsted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapsted_test_case_8"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/text_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/neeraj_kumar_grover"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/text_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapsted" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/text_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <TextView
        android:id="@+id/purchase_cost_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/light_blue"
        android:padding="10dp"
        android:text="@string/purchase_costs"
        android:textColor="@color/text_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_text" />

    <TextView
        android:id="@+id/manufacturer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/light_grey"
        android:padding="@dimen/ten_dp"
        android:text="@string/manufacturer"
        android:textColor="@color/text_dark_grey"
        app:layout_constraintEnd_toStartOf="@+id/manufacturer_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchase_cost_title" />

    <Spinner
        android:id="@+id/manufacturer_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/dark_grey"
        android:padding="@dimen/ten_dp"
        android:text="@string/manufacturer"
        android:textColor="@color/text_light_grey"
        app:layout_constraintEnd_toStartOf="@+id/manufacturer_price"
        app:layout_constraintStart_toEndOf="@+id/manufacturer"
        app:layout_constraintTop_toBottomOf="@+id/purchase_cost_title" />

    <TextView
        android:id="@+id/manufacturer_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/light_grey"
        android:padding="@dimen/ten_dp"
        android:text="@string/manufacturer"
        android:textColor="@color/text_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/manufacturer_spinner"
        app:layout_constraintTop_toBottomOf="@+id/purchase_cost_title" />

    <TextView
        android:id="@+id/category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/light_grey"
        android:padding="@dimen/ten_dp"
        android:text="@string/category"
        android:textColor="@color/text_dark_grey"
        app:layout_constraintEnd_toStartOf="@+id/manufacturer_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manufacturer" />

    <Spinner
        android:id="@+id/item_category_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/dark_grey"
        android:padding="@dimen/ten_dp"
        android:text="@string/manufacturer"
        android:textColor="@color/text_light_grey"
        app:layout_constraintEnd_toStartOf="@+id/manufacturer_price"
        app:layout_constraintStart_toEndOf="@+id/manufacturer"
        app:layout_constraintTop_toBottomOf="@+id/manufacturer" />

    <TextView
        android:id="@+id/category_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/light_grey"
        android:padding="@dimen/ten_dp"
        android:text="@string/manufacturer"
        android:textColor="@color/text_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/manufacturer_spinner"
        app:layout_constraintTop_toBottomOf="@+id/manufacturer" />

    <TextView
        android:id="@+id/country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/light_grey"
        android:padding="@dimen/ten_dp"
        android:text="@string/country"
        android:textColor="@color/text_dark_grey"
        app:layout_constraintEnd_toStartOf="@+id/manufacturer_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <Spinner
        android:id="@+id/country_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/dark_grey"
        android:padding="@dimen/ten_dp"
        android:text="@string/manufacturer"
        android:textColor="@color/text_light_grey"
        app:layout_constraintEnd_toStartOf="@+id/manufacturer_price"
        app:layout_constraintStart_toEndOf="@+id/manufacturer"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <TextView
        android:id="@+id/country_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/light_grey"
        android:padding="@dimen/ten_dp"
        android:text="@string/manufacturer"
        android:textColor="@color/text_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/manufacturer_spinner"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <TextView
        android:id="@+id/state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/light_grey"
        android:padding="@dimen/ten_dp"
        android:text="@string/state"
        android:textColor="@color/text_dark_grey"
        app:layout_constraintEnd_toStartOf="@+id/manufacturer_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country" />

    <Spinner
        android:id="@+id/state_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/dark_grey"
        android:padding="@dimen/ten_dp"
        android:text="@string/manufacturer"
        android:textColor="@color/text_light_grey"
        app:layout_constraintEnd_toStartOf="@+id/manufacturer_price"
        app:layout_constraintStart_toEndOf="@+id/manufacturer"
        app:layout_constraintTop_toBottomOf="@+id/country" />

    <TextView
        android:id="@+id/state_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/light_grey"
        android:padding="@dimen/ten_dp"
        android:text="@string/manufacturer"
        android:textColor="@color/text_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/manufacturer_spinner"
        app:layout_constraintTop_toBottomOf="@+id/country" />

    <TextView
        android:id="@+id/number_of_purchases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/light_blue"
        android:padding="10dp"
        android:text="@string/number_of_purchases"
        android:textColor="@color/text_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/state" />

    <TextView
        android:id="@+id/item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/light_grey"
        android:padding="@dimen/ten_dp"
        android:text="@string/item"
        android:textColor="@color/text_dark_grey"
        app:layout_constraintEnd_toStartOf="@+id/manufacturer_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_of_purchases" />

    <Spinner
        android:id="@+id/item_id_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/dark_grey"
        android:padding="@dimen/ten_dp"
        android:text="@string/manufacturer"
        android:textColor="@color/text_light_grey"
        app:layout_constraintEnd_toStartOf="@+id/manufacturer_price"
        app:layout_constraintStart_toEndOf="@+id/manufacturer"
        app:layout_constraintTop_toBottomOf="@+id/number_of_purchases" />

    <TextView
        android:id="@+id/item_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/light_grey"
        android:padding="@dimen/ten_dp"
        android:text="@string/manufacturer"
        android:textColor="@color/text_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/manufacturer_spinner"
        app:layout_constraintTop_toBottomOf="@+id/number_of_purchases" />

    <TextView
        android:id="@+id/most_total_purchases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/light_blue"
        android:padding="10dp"
        android:text="@string/most_total_purchases"
        android:textColor="@color/text_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item" />

    <TextView
        android:id="@+id/building"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/light_grey"
        android:padding="@dimen/ten_dp"
        android:text="@string/building"
        android:textColor="@color/text_dark_grey"
        app:layout_constraintEnd_toStartOf="@+id/building_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/most_total_purchases" />

    <TextView
        android:id="@+id/building_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/light_grey"
        android:padding="@dimen/ten_dp"
        android:text="Building Name"
        android:textColor="@color/text_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/building"
        app:layout_constraintTop_toBottomOf="@+id/most_total_purchases" />

</android.support.constraint.ConstraintLayout>